<resources>
    <string name="app_name">DT160 TLogger</string>

    <string name="text_lab1">即时测量</string>
    <string name="text_lab2">定时测量</string>
    <string name="text_result">测量结果</string>
    <string name="text_type">类型</string>
    <string name="text_loading">正在加载</string>
    <string name="text_state">状态</string>
    <string name="text_wake_up">已唤醒</string>
    <string name="text_no_wake_up">未唤醒</string>
    <string name="text_error">错误</string>
    <string name="text_success">成功</string>
    <string name="text_fail">失败</string>
    <string name="text_init">初始化完成</string>
    <string name="text_data">温度数据</string>
    <string name="text_send_pdf">发送PDF格式文件</string>
    <string name="text_send_excel">发送EXCEL格式文件</string>
    <string name="text_nfc">请靠近NFC标签</string>

    <string name="text_about">关于</string>
    <string name="text_version">版本:</string>
    <string name="tips">提示</string>
    <string name="open_nfc">本应用需要打开NFC功能才能使用,请点击设置去开启NFC功能</string>
    <string name="setting">设置</string>


    <string name="text_main1">温度</string>
    <string name="text_main2">记录读取</string>
    <string name="text_main3">系统设置</string>
    <string name="text_main4">请选择测量类型</string>
    <string name="text_main5">压力测量</string>
    <string name="text_main6">外部sensor测量</string>
    <string name="text_main7">电压</string>
    <string name="text_main8">900M场强测量</string>
    <string name="text_main9">RTC温度测量</string>
    <string name="text_main10">场强</string>
    <string name="text_end">结束</string>
    <string name="text_start">开始</string>
    <string name="text_check">查看测温状态</string>
    <string name="text_open">FM11NT0X1TT开启检测</string>
    <string name="text_instruct">测量指令</string>
    <string name="text_configuration">测量配置</string>
    <string name="text_cancel">取消</string>
    <string name="text_confirm">确定</string>
    <string name="text_led_on">LED灯点亮</string>
    <string name="text_led_off">LED灯熄灭</string>
    <string name="text_hint">提示</string>
    <string name="config_text1">唤醒</string>
    <string name="config_text2">查看唤醒</string>
    <string name="config_text3">测温延时</string>
    <string name="config_text4">查看测温延时</string>
    <string name="config_text5">测温间隔</string>
    <string name="config_text6">查看测温间隔</string>
    <string name="config_text7">开启测温</string>
    <string name="config_text8">停止测温</string>
    <string name="config_text9">查看测温状态</string>
    <string name="config_text10">查看测温数据</string>
    <string name="config_text11">开启实时测温</string>
    <string name="config_text12">查看实时测温结果</string>
    <string name="config_text13">设置测温次数</string>
    <string name="config_text14">查看测温次数</string>
    <string name="config_text15">休眠</string>
    <string name="config_text16">超高频初始化</string>
    <string name="config_text17">读C091寄存器</string>
    <string name="config_text18">读C092寄存器</string>


    <string name="hint_text1">开启RTC测温成功</string>
    <string name="hint_text2">开启RTC测温失败</string>
    <string name="hint_text3">结束RTC测温成功</string>
    <string name="hint_text4">结束RTC测温失败</string>
    <string name="hint_text5">当前处于RTC测温流程</string>
    <string name="hint_text6">当前处于非测温流程</string>
    <string name="hint_text7">当前电池电量为:</string>
    <string name="hint_text8">唤醒失败,请重试</string>
    <string name="hint_text9">当前场强为:</string>
    <string name="hint_text10">当前温度为:</string>
    <string name="hint_text11">测温错误</string>
    <string name="hint_text12">配置失败</string>
    <string name="hint_text13">读取失败,请重试!</string>

    <string name="hint_text14">测量次数:</string>
    <string name="hint_text15">测量开始时间:</string>
    <string name="hint_text16">测量超过最低温度次数:</string>
    <string name="hint_text17">设置测量范围:</string>
    <string name="hint_text18">测量间隔时间:</string>
    <string name="hint_text19">测量超过最高温度次数:</string>
    <string name="hint_text20">最高温度:</string>
    <string name="hint_text21">最低温度:</string>
    <string name="hint_text22">测温状态:</string>
    <string name="hint_text23">正在测量</string>
    <string name="hint_text24">测量结束</string>
    <string name="hint_text25">异常停止</string>
    <string name="hint_text26">当前处于测温延时中,请稍等!</string>
    <string name="hint_text27">测量延迟时间:</string>

    <string name="text_measure_delay">• 延迟测温时间:</string>
    <string name="text_measure_interval">• 测温间隔时间:</string>
    <string name="text_measure_mode">存储模式</string>
    <string name="text_measure_normal_mode">正常数据存储模式</string>
    <string name="text_measure_compression_mode">压缩数据存储模式1</string>
    <string name="configure1">原始数据存储模式</string>
    <string name="configure2">标准模式配置</string>
    <string name="limit_mode_2">limit2模式</string>
    <string name="text_measure_count">• 测温次数:</string>
    <string name="text_max_tp">• 高温上限设置: </string>
    <string name="text_min_tp">• 低温下限设置: </string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="text_min_max">低温下限不能大于高温</string>


    <string name="applyConfig">发送配置指令并开启RTC测温</string>
<!--    <string name="resetConfig">初始化标签状态</string>-->

    <string name="liveStatus_label">实时测温</string>

    <string name="celsius">°C</string>



    <string name="nfc_instruct">NFC指令模式</string>
    <string name="input_command">请输入指令</string>
    <string name="send_command">发送指令</string>
    <string name="empty_command">指令不能为空</string>

    <string name="mode1">模式一(2位小数)</string>
    <string name="mode2">模式二(3位小数)</string>


    <string name="setting_pwd">设置密码</string>
    <string name="update_pwd">更新密码</string>
    <string name="lock">加锁</string>
    <string name="unlock">解锁</string>
    <string name="check_pwd">输入密码</string>

    <string name="input_pwd">请输入8位数字密码</string>
    <string name="hint_pwd">密码长度必须为8位</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="check_HF">查看入场记录</string>

    <string-array name="spinner">
        <item>Stop RTC</item>
        <item>Lock</item>
    </string-array>
    <string name="text_send_email">发送邮件</string>
    <string name="create_file">文件创建失败,请重试</string>
<!--pdf-->
    <string name="temperature_tag_report">温度标签报告</string>
    <string name="temperature_curve">温度曲线:</string>
    <string name="status_normal">报告状态</string>
    <string name="tag_info">记录概要信息</string>
    <string name="detail_datas">详细数据:</string>
    <string name="time">时间</string>
    <string name="value">温度</string>
    <string name="delay_time">测温延迟时间:</string>

    <string name="report">测温报告</string>
    <string name="record">测温记录</string>
    <string name="m_time">测温时间</string>


    <string name="mode_error">测温次数过大,请修改测温模式</string>

    <string name="notes_hint">请按照注释进行设置</string>
    <string name="notes">注释:</string>



</resources>
