<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/text_main1"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        android:text="@string/text_main4"
        android:layout_marginBottom="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_tp"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/text_main1"


            />
        <Button
            android:id="@+id/btn_cell"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:textAllCaps="false"
            android:text="@string/text_main7"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sensor"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/text_main6"

            />
        <Button
            android:id="@+id/btn_pressure"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/text_main5"

            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_led_on"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/text_led_on"

                />
            <Button
                android:id="@+id/btn_led_off"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:textAllCaps="false"
                android:text="@string/text_led_off"

                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:id="@+id/btn_fsm"
            android:textAllCaps="false"
            android:text="@string/text_main10"
            />
        <Button
            android:id="@+id/btn_field"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:visibility="gone"
            android:textAllCaps="false"
            android:text="@string/text_main8"
            />
        <Button
            android:id="@+id/btn_open"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:textAllCaps="false"
            android:text="@string/text_open"
            android:visibility="gone"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_main9"
        style="@style/textStyle"
        android:layout_marginBottom="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:text="@string/text_start"
            android:textAllCaps="false"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_check"
            style="@style/textStyle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/text_check" />
        <Button
            android:id="@+id/btn_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:text="@string/text_end"
            android:textAllCaps="false"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_read"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:textAllCaps="false"
            android:text="读取温度"
            />
        <Button
            android:id="@+id/btn_wake"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/textStyle"
            android:text="唤醒指令"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_status1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:text="状态1"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/btn_status2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:text="状态2"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <Switch
            android:id="@+id/switchRealTime"
            style="@style/TextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/liveStatus_label"/>
    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textStyle"
        />
        <TextView
            android:id="@+id/tvID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
</ScrollView>